--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700;1,800&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'EB Garamond';
+  color: rgb(83, 63, 102);
 }
 
 .App-logo {
@@ -35,4 +39,71 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.controls {
+  width: 100%;
+  margin: auto;
+  /*height: 45px;*/
+  left:0;
+  right:0;
+}
+
+body {
+  background-color: rgb(232, 225, 239);
+}
+
+.italic {
+  font-style: italic;
+}
+
+.main {
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+p {
+  text-align: left;
+}
+
+#title {
+  display: flex;
+  width: 100%;
+  text-align: right;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.title-heading {
+  font-size: 1.5em;
+  width: 128px;
+  font-weight: bold;
+  line-height: 1em;
+}
+
+.title-icon {
+  display: block;
+  width: 56px;
+  padding-left: 16px;
+}
+
+/* 640px and up */
+@media only screen and (min-width: 40em) {
+
+}
+
+/* 768px and up */
+@media only screen and (min-width: 48em) {
+
+}
+
+/* 1024px and up */
+@media only screen and (min-width: 64em) {
+
+}
+
+/* 1280px and up */
+@media only screen and (min-width: 80em) {
+
 }
