--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   text-align: center;
   font-family: 'EB Garamond';
   color: rgb(83, 63, 102);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .App-logo {
@@ -41,6 +44,23 @@
   }
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.App {
+  max-width: 900px;
+  margin: auto;
+  left:0;
+  right:0;
+}
+
+footer {
+  flex-shrink: 0;
+  padding: 16px;
+  margin-top: 16px;
+}
+
 .controls {
   width: 100%;
   margin: auto;
@@ -51,6 +71,7 @@
 
 body {
   background-color: rgb(232, 225, 239);
+  margin-bottom: 48px;
 }
 
 .italic {
@@ -58,6 +79,7 @@ body {
 }
 
 .main {
+  flex: 1 0 auto;
   margin-left: 24px;
   margin-right: 24px;
 }
@@ -76,8 +98,8 @@ p {
 }
 
 .title-heading {
-  font-size: 1.5em;
-  width: 128px;
+  font-size: 2em;
+  width: 164px;
   font-weight: bold;
   line-height: 1em;
 }
@@ -107,3 +129,15 @@ p {
 @media only screen and (min-width: 80em) {
 
 }
+
+/*
+
+
+#845EC2
+#D65DB1
+#FF6F91
+#FF9671
+#FFC75F
+#F9F871
+
+*/
