--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,11 @@ h2, h3 {
   padding-left: 16px;
 }
 
+text {
+  font-family: 'EB Garamond';
+  color: rgb(83, 63, 102);
+}
+
 /* 640px and up */
 @media only screen and (min-width: 40em) {
 
